--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,7 @@
 <h1>New category</h1>
 <%= simple_form_for [ @list ] do |f| %>
-  <%= f.error_notification %>
   <%= f.input :name %>
   <%= f.submit "Submit", class: "btn btn-primary" %>
 <% end %>
+
+<%= link_to "Back categories", lists_path %>
